//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Company {
  id String [pk]
  name String [not null]
  GST String [unique]
  gstAddress String
  logo String
  stamp String
  email String [unique]
  phone String
  website String
  industry String
  foundedDate DateTime
  status String
  users User [not null]
  addresses Address [not null]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  PO PO [not null]
}

Table Address {
  id String [pk]
  street String [not null]
  city String [not null]
  state String [not null]
  postalCode String [not null]
  country String [not null]
  addressType AddressType [not null]
  companyId String [not null]
  company Company [not null]
}

Table User {
  id String [pk]
  email String [unique, not null]
  emailVerified DateTime
  password String [not null]
  name String
  mobile String
  role Role [not null, default: 'USER']
  company Company [not null]
  companyId String [not null]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  qualityAssurance QualityAssurance
  pos PO [not null]
  rfps RFP [not null]
  Vendor Vendor [not null]
  approversList ApproversList [not null]
}

Table Vendor {
  id String [pk]
  customerCode String
  primaryName String [not null]
  companyName String [not null]
  contactDisplayName String [not null]
  email String
  workPhone String
  mobile String
  website String
  gstin String [unique]
  msmeNo String
  address String
  customerState String
  customerCity String
  country String
  zip String
  remarks String
  pan String
  verifiedById String
  verifiedBy User
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  Quotation Quotation [not null]
}

Table Payment {
  id String [pk]
  invoice Invoice [not null]
  invoiceId String [not null]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
}

Table PO {
  id String [pk]
  poId String [unique, not null]
  quotation Quotation [not null]
  quotationId String [unique, not null]
  user User [not null]
  userId String [not null]
  invoice Invoice
  remarks String [not null]
  companyId String [not null]
  company Company [not null]
  rfpId String [unique, not null]
  rfp RFP [not null]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
}

Table GoodStatus {
  id String [pk]
  invoice Invoice [not null]
  invoiceId String [unique, not null]
  deliveryStatus Boolean [not null]
  qualityAssurance Boolean [not null]
  qualityAssuranceLeader QualityAssurance [not null]
  qualityAssuranceLeaderId String [not null]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
}

Table ProductCategory {
  id String [pk]
  name String [unique, not null]
  products Product [not null]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
}

Table Product {
  id String [pk]
  name String [not null]
  modelNo String [not null]
  specification String [not null]
  productCategory ProductCategory [not null]
  productCategoryId String [not null]
  rfpProducts RFPProduct [not null]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
}

Table Invoice {
  id String [pk]
  po PO [not null]
  poId String [unique, not null]
  payments Payment [not null]
  goodStatus GoodStatus
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
}

Table SupportingDocument {
  id String [pk]
  quotation Quotation [not null]
  quotationId String [not null]
  documentType String [not null]
  documentName String [not null]
  location String [not null]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
}

Table Quotation {
  id String [pk]
  rfp RFP [not null]
  rfpId String [not null]
  vendor Vendor [not null]
  vendorId String [not null]
  isPrimary Boolean [not null, default: false]
  refNo String
  totalAmount Decimal [not null]
  totalAmountWithoutGST Decimal [not null]
  po PO
  supportingDocuments SupportingDocument [not null]
  vendorPricings VendorPricing [not null]
  otherCharges OtherCharge [not null]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
}

Table OtherCharge {
  id String [pk]
  quotation Quotation [not null]
  quotationId String [not null]
  name String [not null]
  price Decimal [not null]
  gst Decimal [not null]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]

  indexes {
    (quotationId, name) [unique]
  }
}

Table RFP {
  id String [pk]
  rfpId String [unique, not null]
  requirementType String [not null]
  dateOfOrdering DateTime [not null]
  deliveryLocation String [not null]
  deliveryByDate DateTime [not null]
  user User [not null]
  userId String [not null]
  rfpStatus RFPStatus [not null, default: 'DRAFT']
  preferredQuotationId String
  quotations Quotation [not null]
  approversList ApproversList [not null]
  rfpProducts RFPProduct [not null]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  po PO
}

Table RFPProduct {
  id String [pk]
  rfp RFP [not null]
  rfpId String [not null]
  product Product [not null]
  productId String [not null]
  description String
  quantity Int [not null]
  vendorPricings VendorPricing [not null]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]

  indexes {
    (rfpId, productId) [unique]
  }
}

Table VendorPricing {
  id String [pk]
  quotation Quotation [not null]
  quotationId String [not null]
  rfpProduct RFPProduct [not null]
  rfpProductId String [not null]
  price Decimal [not null]
  GST Int [not null]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]

  indexes {
    (quotationId, rfpProductId) [unique]
  }
}

Table ApproversList {
  id String [pk]
  rfpId String [not null]
  rfp RFP [not null]
  user User [not null]
  userId String [not null]
  approved Boolean [not null, default: false]
  approvedAt DateTime
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]

  indexes {
    (rfpId, userId) [unique]
  }
}

Table QualityAssurance {
  id String [pk]
  user User [not null]
  userId String [unique, not null]
  goodStatuses GoodStatus [not null]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [default: `now()`, not null]
}

Enum AddressType {
  BUSINESS
  SHIPPING
}

Enum Role {
  ADMIN
  PR_MANAGER
  FINANCE_MANAGER
  ACCOUNTANT
  QUALITY_ASSURANCE
  USER
  VENDOR
}

Enum RFPStatus {
  DRAFT
  SUBMITTED
  PO_CREATED
  ADVANCE_PAID
  INVOICE_RECEIVED
  GRN_RECEIVED
  PAYMENT_DONE
}

Ref: Address.companyId > Company.id

Ref: User.companyId > Company.id

Ref: Vendor.verifiedById > User.id

Ref: Payment.invoiceId > Invoice.id

Ref: PO.quotationId - Quotation.id

Ref: PO.userId > User.id

Ref: PO.companyId > Company.id

Ref: PO.rfpId - RFP.id

Ref: GoodStatus.invoiceId - Invoice.id

Ref: GoodStatus.qualityAssuranceLeaderId > QualityAssurance.id

Ref: Product.productCategoryId > ProductCategory.id

Ref: Invoice.poId - PO.id

Ref: SupportingDocument.quotationId > Quotation.id

Ref: Quotation.rfpId > RFP.id

Ref: Quotation.vendorId > Vendor.id

Ref: OtherCharge.quotationId > Quotation.id

Ref: RFP.userId > User.id

Ref: RFPProduct.rfpId > RFP.id

Ref: RFPProduct.productId > Product.id

Ref: VendorPricing.quotationId > Quotation.id

Ref: VendorPricing.rfpProductId > RFPProduct.id

Ref: ApproversList.rfpId > RFP.id

Ref: ApproversList.userId > User.id

Ref: QualityAssurance.userId - User.id